--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -4,13 +4,15 @@ author: HK
 title: Hauswerk
 description: Hauswerk Köln
 ---
-import Image from '../components/Image.astro';
-import Hero from '../components/Hero.astro';
-import Box from '../components/Box.astro';
+
+import Image from "../components/Image.astro";
+import Hero from "../components/Hero.astro";
+import Box from "../components/Box.astro";
+import Feedback from "../components/Feedback.astro";
 
 <Hero>
-HAUSWERK Köln - Handwerkliche Dienstleistungen und Rundumbetreuung für Ihre Projekte. 
-Unser excellenter Kundenservice bietet mehr.
+  HAUSWERK Köln - Handwerkliche Dienstleistungen und Rundumbetreuung für Ihre
+  Projekte. Unser excellenter Kundenservice bietet mehr.
 </Hero>
 
 ## Dienstleistungen
@@ -19,7 +21,6 @@ Unser excellenter Kundenservice bietet mehr.
 - Küchenmontage
 - Anschluss und Reparatur von Hausgeräten
 - Anbringen von Regalen, Halterungen, Lampen, etc.
-
 
 ## Rundumbetreuung:
 
@@ -30,26 +31,36 @@ Unser excellenter Kundenservice bietet mehr.
 ## Kundenservice
 
 - Betreuung und Instandhaltung von Objekten / Liegenschaften
-- Schlüsseldienst, Notöffnungen, 
+- Schlüsseldienst, Notöffnungen,
 
 <Box>
-Die Mission von HAUSWERK Uli Doll ist es, Lebens- und Arbeitsräume zu schaffen und so zu optimieren, damit unter Berücksichtigung der zur Verfügung stehenden Ressourcen, das größtmögliche Maß an Wohn- und Lebensqualität erreicht wird.
+  Die Mission von HAUSWERK Uli Doll ist es, Lebens- und Arbeitsräume zu schaffen
+  und so zu optimieren, damit unter Berücksichtigung der zur Verfügung stehenden
+  Ressourcen, das größtmögliche Maß an Wohn- und Lebensqualität erreicht wird.
 </Box>
-
 
 ## Sie sind zufrieden – das ist die Hauptsache
 
-Rundum fachmännische Betreuung. Von der Beratung bis zur Erledigung Ihrer Wünsche. 
+Rundum fachmännische Betreuung. Von der Beratung bis zur Erledigung Ihrer Wünsche.
 
 Sie bekommen einfache und praktische Lösungen.
 
-Wir machen Festpreise oder Paketpreise ohne versteckte Kosten. 
+Wir machen Festpreise oder Paketpreise ohne versteckte Kosten.
 
 Sie haben nur einen Ansprechpartner.
 
- Ihr Vorteil dabei: Sie brauchen nicht für jeden Handgriff einen separaten Servicedienst oder Handwerker zu rufen.
- 
- Bei Hauswerk bekommen Sie genau das, was Sie brauchen – alles aus einer Hand.
+Ihr Vorteil dabei: Sie brauchen nicht für jeden Handgriff einen separaten Servicedienst oder Handwerker zu rufen.
+
+Bei Hauswerk bekommen Sie genau das, was Sie brauchen – alles aus einer Hand.
+
+<Feedback author="Familie Robie, Köln">
+  Wir möchten uns noch mal herzlich bedanken für Ihre sehr gute und saubere
+  Arbeit. Besonders mir macht es wieder viel Freude in meiner "Neuen Küche" zu
+  wirken. Auch das Preis/Leistungsverhältnis stimmt in jedem Fall.
+</Feedback>
 
 
-
+<Feedback author="Dr. Baues, Bonn">
+  Ich habe mittlerweile mehrfach die Hilfe von Herrn Doll in Anspruch genommen,
+  was ja eigentlich schon alles sagt.
+</Feedback>
