--- a/src/pages/impressum.mdx
+++ b/src/pages/impressum.mdx
@@ -5,6 +5,20 @@ title: Impressum
 description: Hauswerk Köln Impressum
 ---
 
-## Impressum
+# Impressum
 
-Lorem Impressum
+Ulrich Doll  
+Teichstr. 1  
+50827 Köln  
+
+Mobil: 0178. 158 54 59  
+Mail: info@hauswerk-koeln.de  
+www.hauswerk-koeln.de  
+
+St.-Nr: 217/5057/4672  
+USt-IdNr: DE230413758  
+
+Inhaltlich Verantwortlicher gemäß § 55 Abs. 2 RStV:   
+Ulrich Doll (Anschrift wie oben)  
+
+Haftungshinweis: Trotz sorgfältiger inhaltlicher Kontrolle übernehme ich keine Haftung für die Inhalte externer Links. Für den Inhalt der verlinkten Seiten sind ausschließlich deren Betreiber verantwortlich.
