--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -33,8 +33,9 @@ import Feedback from "../components/Feedback.astro";
 - Betreuung und Instandhaltung von Objekten / Liegenschaften
 - Schlüsseldienst, Notöffnungen,
 
-<Box>
-  Die Mission von HAUSWERK Uli Doll ist es, Lebens- und Arbeitsräume zu schaffen
+<Box filename="portrait.jpg">
+  **Die Mission von HAUSWERK Uli Doll** 
+  ist es, Lebens- und Arbeitsräume zu schaffen
   und so zu optimieren, damit unter Berücksichtigung der zur Verfügung stehenden
   Ressourcen, das größtmögliche Maß an Wohn- und Lebensqualität erreicht wird.
 </Box>
