--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -9,6 +9,7 @@ import Image from "../components/Image.astro";
 import Hero from "../components/Hero.astro";
 import Box from "../components/Box.astro";
 import Feedback from "../components/Feedback.astro";
+import Gallery from "../components/Gallery.astro";
 
 <Hero>
   HAUSWERK Köln - Handwerkliche Dienstleistungen und Rundumbetreuung für Ihre
@@ -27,6 +28,14 @@ import Feedback from "../components/Feedback.astro";
 - Reparatur und Wartung von Schlössern und Beschlägen
 - Sicherheitstechnik
 - Sanitärinstallationen und Reparaturen
+
+<Gallery>
+  <Image filename="BILD0065_1.jpeg" alt="Küche" />
+  <Image filename="BILD0677.jpeg" alt="Küche" />
+  <Image filename="BILD2236_1.jpeg" alt="Küche" />
+  <Image filename="P1010089_1.jpeg" alt="Küche" />
+  <Image filename="IMGP7778_1.jpeg" alt="Küche" />
+</Gallery>
 
 ## Kundenservice
 
