--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -10,6 +10,7 @@ import Hero from "../components/Hero.astro";
 import Box from "../components/Box.astro";
 import Feedback from "../components/Feedback.astro";
 import Gallery from "../components/Gallery.astro";
+import GalleryImage from "../components/GalleryImage.astro";
 
 <Hero>
   HAUSWERK Köln - Handwerkliche Dienstleistungen und Rundumbetreuung für Ihre
@@ -30,11 +31,11 @@ import Gallery from "../components/Gallery.astro";
 - Sanitärinstallationen und Reparaturen
 
 <Gallery>
-  <Image filename="BILD0065_1.jpeg" alt="Küche" />
-  <Image filename="BILD0677.jpeg" alt="Küche" />
-  <Image filename="BILD2236_1.jpeg" alt="Küche" />
-  <Image filename="P1010089_1.jpeg" alt="Küche" />
-  <Image filename="IMGP7778_1.jpeg" alt="Küche" />
+  <GalleryImage filename="BILD0065_1.jpeg" alt="Kücheneinbau" />
+  <GalleryImage filename="BILD0677.jpeg" alt="Schiebetür im Bad" />
+  <GalleryImage filename="BILD2236_1.jpeg" alt="Dachverkleidung" />
+  <GalleryImage filename="P1010089_1.jpeg" alt="Türanfertigung" />
+  <GalleryImage filename="IMGP7778_1.jpeg" alt="Dacherneuerung" />
 </Gallery>
 
 ## Kundenservice
@@ -42,7 +43,7 @@ import Gallery from "../components/Gallery.astro";
 - Betreuung und Instandhaltung von Objekten / Liegenschaften
 - Schlüsseldienst, Notöffnungen,
 
-<Box filename="portrait.jpg">
+<Box filename="portrait.jpg" alt="Uli Doll">
   **Die Mission von HAUSWERK Uli Doll** 
   ist es, Lebens- und Arbeitsräume zu schaffen
   und so zu optimieren, damit unter Berücksichtigung der zur Verfügung stehenden
