--- a/src/pages/bewertungen.mdx
+++ b/src/pages/bewertungen.mdx
@@ -3,6 +3,9 @@ layout: ../layouts/Layout.astro
 author: HK
 title: Bewertungen
 description: Hauswerk Köln Bewertungen
+navHeader: true
+navTitle: Bewertungen
+navPosition: 2
 ---
 import Reviews from "../components/Reviews.astro";
 
