--- a/src/pages/demo.mdx
+++ b/src/pages/demo.mdx
@@ -3,8 +3,9 @@ layout: ../layouts/Layout.astro
 author: HK
 title: Hauswerk
 description: Hauswerk Köln
+navHide: true
 navHeader: true
-navTitle: Startseite
+navTitle: Demoseite
 navPosition: 1
 ---
 
@@ -16,11 +17,16 @@ import Gallery from "../components/Gallery.astro";
 import GalleryImage from "../components/GalleryImage.astro";
 
 <Hero>
-  HAUSWERK Köln - Handwerkliche Dienstleistungen und Rundumbetreuung für Ihre
-  Projekte. Unser excellenter Kundenservice bietet mehr.
+  H1 Überschrift mit hellem Hintergrund.
+  Darf nur einmal pro Seite angelegt werden.
+  Darf nicht zusammen mit einem H1 (# Überschrift) genutzt werden.
 </Hero>
 
-## Dienstleistungen
+# Überschrift ersten Grades H1
+
+## Überschrift zweiten Grades H2
+
+## Überschrift dritten Grades H3
 
 - Möbelmontage und Möbelreparatur
 - Küchenmontage
