--- a/src/pages/impressum.mdx
+++ b/src/pages/impressum.mdx
@@ -3,6 +3,9 @@ layout: ../layouts/Layout.astro
 author: HK
 title: Impressum
 description: Hauswerk Köln Impressum
+navHeader: false
+navTitle: Impressum
+navPosition: 11
 ---
 
 # Impressum
