--- a/src/pages/kontakt.mdx
+++ b/src/pages/kontakt.mdx
@@ -2,6 +2,9 @@
 layout: ../layouts/Layout.astro
 title: Kontakt
 description: Hauswerk Köln Kontakt
+navHeader: true
+navTitle: Kontakt
+navPosition: 10
 ---
 
 # Kontakt
