Update and rename src/pages/index.mdx to Quelle/Seiten/index.mdx

--- a/Quelle/Seiten/index.mdx
+++ b/Quelle/Seiten/index.mdx
@@ -47,7 +47,7 @@ import GalleryImage from "../components/GalleryImage.astro";
 - Schlüsseldienst, Notöffnungen,
 
 <Box filename="portrait.jpg" alt="Uli Doll">
-  **Die Mission von HAUSWERK Uli Doll** 
+  **Die Mission von HAUSWERK**
   ist es, Lebens- und Arbeitsräume zu schaffen
   und so zu optimieren, damit unter Berücksichtigung der zur Verfügung stehenden
   Ressourcen, das größtmögliche Maß an Wohn- und Lebensqualität erreicht wird.
