--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -23,15 +23,13 @@ import GalleryImage from "../components/GalleryImage.astro";
 ## Dienstleistungen
 
 - Möbelmontage und Möbelreparatur
-- Küchenmontage
-- Anschluss und Reparatur von Hausgeräten
-- Anbringen von Regalen, Halterungen, Lampen, etc.
-
-## Rundumbetreuung:
-
+- Anbringen von Regalen, Halterungen, Lampen, Gardinenschienen, Rollos, etc.
 - Reparatur und Wartung von Schlössern und Beschlägen
-- Sicherheitstechnik
-- Sanitärinstallationen und Reparaturen
+- Schlüsseldienst, Notöffnungen
+- Sanitärinstallationen und Reparaturen (Anschluss Armatur, Siphonsystem, etc.)
+- Küchenmontage
+- Betreuung und Instandhaltung von Objekten / Liegenschaften
+
 
 <Gallery>
   <GalleryImage filename="BILD0065_1.jpeg" alt="Kücheneinbau" />
@@ -41,10 +39,6 @@ import GalleryImage from "../components/GalleryImage.astro";
   <GalleryImage filename="IMGP7778_1.jpeg" alt="Dacherneuerung" />
 </Gallery>
 
-## Kundenservice
-
-- Betreuung und Instandhaltung von Objekten / Liegenschaften
-- Schlüsseldienst, Notöffnungen,
 
 <Box filename="portrait.jpg" alt="Uli Doll">
   **Die Mission von HAUSWERK**
@@ -56,15 +50,10 @@ import GalleryImage from "../components/GalleryImage.astro";
 ## Sie sind zufrieden – das ist die Hauptsache
 
 Rundum fachmännische Betreuung. Von der Beratung bis zur Erledigung Ihrer Wünsche.
-
 Sie bekommen einfache und praktische Lösungen.
-
 Wir machen Festpreise oder Paketpreise ohne versteckte Kosten.
-
 Sie haben nur einen Ansprechpartner.
-
 Ihr Vorteil dabei: Sie brauchen nicht für jeden Handgriff einen separaten Servicedienst oder Handwerker zu rufen.
-
 Bei Hauswerk bekommen Sie genau das, was Sie brauchen – alles aus einer Hand.
 
 <Feedback author="Familie Robie, Köln">
