--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -50,7 +50,8 @@ import GalleryImage from "../components/GalleryImage.astro";
 
 ## Sie sind zufrieden – das ist die Hauptsache
 
-Rundum fachmännische Betreuung. Von der Beratung bis zur Erledigung Ihrer Wünsche.
+Rundum fachmännische Betreuung. 
+Von der Beratung bis zur Erledigung Ihrer Wünsche.
 Sie bekommen einfache und praktische Lösungen.
 Wir machen Festpreise oder Paketpreise ohne versteckte Kosten.
 Sie haben nur einen Ansprechpartner.
