--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -26,7 +26,7 @@ import GalleryImage from "../components/GalleryImage.astro";
 - Anbringen von Regalen, Halterungen, Lampen, Gardinenschienen, Rollos, etc.
 - Reparatur und Wartung von Schlössern und Beschlägen
 - Schlüsseldienst, Notöffnungen
-- Sanitärinstallationen und Reparaturen (Anschluss Armatur, Siphon, etc.)
+- Sanitärinstallationen und Reparaturen (Waschtischmontage, Anschluss Armatur und Siphon, etc.)
 - Küchenmontage
 - alle möglichen kniffeligen Arbeiten, die Ideen und kreative Lösungen benötigen
 - Betreuung und Instandhaltung von Objekten / Liegenschaften
