--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -25,10 +25,10 @@ import GalleryImage from "../components/GalleryImage.astro";
 - Möbelmontage und Möbelreparatur
 - Anbringen von Regalen, Halterungen, Lampen, Gardinenschienen, Rollos, etc.
 - Reparatur und Wartung von Schlössern und Beschlägen
-- Schlüsseldienst, Notöffnungen
+- Schlüsseldienst, Notöffnungen, Sicherheitstechnik
 - Sanitärinstallationen und Reparaturen (Waschtischmontage, Anschluss Armatur und Siphon, etc.)
 - Küchenmontage
-- alle möglichen kniffeligen Arbeiten, die Ideen und kreative Lösungen benötigen
+- Alle möglichen kniffeligen Arbeiten, die Ideen und kreative Lösungen benötigen
 - Betreuung und Instandhaltung von Objekten / Liegenschaften
 
 
