feat: import ratings

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -31,6 +31,7 @@ import GalleryImage from "../components/GalleryImage.astro";
 - Alle möglichen kniffeligen Arbeiten, die Ideen und kreative Lösungen benötigen
 - Betreuung und Instandhaltung von Objekten / Liegenschaften
 
+## Galerie
 
 <Gallery>
   <GalleryImage filename="BILD0065_1.jpeg" alt="Kücheneinbau" />
@@ -50,13 +51,13 @@ import GalleryImage from "../components/GalleryImage.astro";
 
 ## Sie sind zufrieden – das ist die Hauptsache
 
-Rundum fachmännische Betreuung. 
-Von der Beratung bis zur Erledigung Ihrer Wünsche.
-Sie bekommen einfache und praktische Lösungen.
-Wir machen Festpreise oder Paketpreise ohne versteckte Kosten.
-Sie haben nur einen Ansprechpartner.
-Ihr Vorteil dabei: Sie brauchen nicht für jeden Handgriff einen separaten Servicedienst oder Handwerker zu rufen.
-Bei Hauswerk bekommen Sie genau das, was Sie brauchen – alles aus einer Hand.
+Rundum fachmännische Betreuung.  
+Von der Beratung bis zur Erledigung Ihrer Wünsche.  
+Sie bekommen einfache und praktische Lösungen.  
+Wir machen Festpreise oder Paketpreise ohne versteckte Kosten.  
+Sie haben nur einen Ansprechpartner.  
+Ihr Vorteil dabei: Sie brauchen nicht für jeden Handgriff einen separaten Servicedienst oder Handwerker zu rufen.  
+Bei Hauswerk bekommen Sie genau das, was Sie brauchen – alles aus einer Hand.  
 
 
 <Feedback author="Familie Robie, Köln">
